# Nimda_2024_LateWinter

./: .gitattributes  .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
AD/Attendance/: README.md
AD/Moda/: .env.dev.example  .env.prod.example  README.md  docker-compose.yaml
AD/Moda_1/: docker-compose.yaml  test.py
AD/Outcraft/: README.md  docker-compose.yml  dockerfile
AD/Outcraft/cuberite/lib/expat/: CMakeLists.txt
AD/SSB/: README.md  docker-compose.yml
Cat/: README.md  generate.py
HiddenWay/: README.md  config.json  core.py  dockerfile  main.py
HighWay/: .dockerignore  README.md  dockerfile  main.py
Inside/: README.md  generate.py
Justice_1/: generate.py
Kapellmeister/: README.md  generate.py
Missing/: .dockerignore  README.md  config.json  create_db.py  dockerfile  generate.py  main.py
Moda_1/: README.md  docker-compose.yaml
Moda_2/: README.md
Moda_3/: README.md
P1/: README.md  flag.php  index.php
P2/: README.md  flag.php  index.php
P3/: README.md  dockerfile  flag.php  index.php
P4/: README.md  articles.php  dockerfile  flag.php  index.php  news.php  ouff.php  users.php
ReQuest/: README.md  ReQuest.sln  dockerfile  generate_questions.py  load_benchmark.py  main.py  questions.json  solver.py
Sanity/: README.md
StrangeLanguage/: README.md  generate.py  main.py
TTT/: README.md  TTT.sln
Think/: README.md  config.json  config_exact.json  core.py  dockerfile  generate_config.py  main.py  requirements.txt
Wrapped/: README.md  generate.py
XFold/: Program.cs  README.md  XFold.sln
docs/: NimdaCTF.docx
(+276 files in other folders)
